Responsive first commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- Main container. -->
-  <div role="main" id="main"></div>
+  <div role="main" id="main">Loading, please wait...</div>
 
   <!-- Application source. -->
   <script data-main="app/config" src="assets/js/libs/require.js"></script>
