--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>Solrita.js</title>
+		<title>Solrita.js</title>
 
-  <!-- Application styles. -->
-  <link rel="stylesheet" href="assets/css/index.css">
-</head>
+		<!-- Application styles. -->
+		<link rel="stylesheet" href="assets/css/index.css">
+	</head>
 
-<body>
-  <!-- Main container. -->
-  <div role="main" id="main">Loading, please wait...</div>
+	<body>
+		<!-- Main container. -->
+		<div role="main" id="main">Loading, please wait...</div>
 
-  <!-- Application source. -->
-  <script data-main="app/config" src="assets/js/libs/require.js"></script>
-</body>
+		<!-- Application source. -->
+		<script data-main="app/config" src="assets/js/libs/require.js"></script>
+
+		<!-- Google Analytics. -->
+		<script type="text/javascript">
+
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-36540109-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
+		</script>
+	</body>
 </html>
