Linking feature requests wiki page in TODO section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 </ul><h2>TODO</h2>
 
 <ul>
+<li><a href="https://github.com/jbarroso/solritajs/wiki/Feature-requests">Feature requests</a> by <a href="https://github.com/clausjuhl">clausjuhl</a>.</li>
 <li>Suggest in search form.</li>
 <li>Collapsable result list with options to choose between large/short view format.</li>
 <li>Add facet filters links in result values.</li>
